Improve exception handling. Add dawe nrm vocabs endpoint.
