# src/linkeddata_api/views/api_v1/vocab_viewer/dawe_nrm/vocabs/schema.py
@@ -1,0 +1,11 @@
+from typing import Optional
+
+from pydantic import BaseModel
+
+
+class Item(BaseModel):
+    id: str
+    label: str
+    description: Optional[str] = None
+    created: Optional[str] = None
+    modified: Optional[str] = None
